     CHANGES in PHANGORN VERSION 2.5.0


     CHANGES in PHANGORN VERSION 2.4.0

NEW FEATURES

    o new function add.tips

BUG FIXES

    o densiTree, bug report by Richel Bilderbeek
    
    o tree rearrangement in optim.pml return tree with double edge matrix
    
    o phyDat should work now for named vectors
    
OTHER CHANGES

    o many more unit tests
    
    o more consistent coding style
    
    o flashClust and seqLogo are not suggested packages any more


     CHANGES in PHANGORN VERSION 2.3.0

NEW FEATURES

    o new function mast to compute the maximum agreement subtree

    o identify.networx to identify splits in a network

    o densiTree got more attributes
    
    o unique.dist, to filter duplicate distances 
    
    o ancestral.pml and ancestral.pars are now may return proper phyDat objects

      and in for DNA may return ambiguous states

BUG FIXES

    o densiTree may if the consensus tree had different ordering of labels
 
OTHER CHANGES

    o acctran allows multiPhylo objects as input
    
    o rNNI has been completely rewritten and is faster


     CHANGES in PHANGORN VERSION 2.2.0

NEW FEATURES

    o midpoint in now generic and works for multiPhylo objects

    o as.bitsplits.splits to better interact with ape

BUG FIXES

    o bug fix in RI and CI for ambiguous data  

OTHER CHANGES

    o added roxygen2 documentation, so R code is now much better documented,
    
      reorganisation of some documentation
    
    o many more unit tests


     CHANGES in PHANGORN VERSION 2.1.0

NEW FEATURES

    o new functions to compute the (approximate) SPR distance (sprdist, SPR.dist)
    
      contributed by Leonardo de Oliveira Martins.

    o super tree methods based on NNI and SPR distances

BUG FIXES

    o fixed bug in KF.dist  

OTHER CHANGES

    o improvements to as.networx. It often now produces networks with less edges 
   
      resulting in much nicer plots 

    o plot.networx does take a different layout algorithm 
