@@ -236,7 +236,7 @@ fdir <- system.file("extdata/trees", package = "phangorn")
 primates <- read.phyDat(file.path(fdir, "primates.dna"), format = "phylip", type = "DNA")
 tree <- NJ(dist.ml(primates))
 dat <- phyDat(as.character(primates), "CODON")
-fit <- pml(tree, dat)
+fit <- pml(tree, dat, bf="F3x4")
 fit0 <- optim.pml(fit, control = pml.control(trace = 0))
 fit1 <- optim.pml(fit, model="codon1", control=pml.control(trace=0))
 fit2 <- optim.pml(fit, model="codon2", control=pml.control(trace=0))
